<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/comment_header_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_eeeeee"
        android:padding="6.67dp">

        <TextView
            android:id="@+id/comment_floor_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_floor_num"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/comment_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/comment_time"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comment_content_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_header_rl"
        android:padding="6.67dp">

        <TextView
            android:id="@+id/comment_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/comment_username"
            android:textColor="@color/color_lowest_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/comment_reply_floor_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/comment_reply_floor_num"
            android:textColor="@color/color_lowest_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/comment_content_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_username_tv"
            android:padding="13.33dp"
            android:textColor="@color/color_black"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comment_footer_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_content_rl"
        android:padding="6.67dp">

        <TextView
            android:id="@+id/comment_agree_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="13.33dp"
            android:layout_toLeftOf="@+id/comment_against_tv"
            android:text="@string/comment_agree"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/comment_against_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/comment_against"
            android:textSize="12sp"/>
    </RelativeLayout>
</RelativeLayout>